# player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matrix-player.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videosurface.cpp  videosurface.h
